Preparing project to Integration Tests and creating SecurityIT